Nav bar changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="section-navbar">
         <div class="container">
             <div class="navbar-left--side">
-                <a href="index.html">ANURAG TIWARI</a>
+                <a href="index.html">Portfolio.</a>
             </div>
             <div class="navbar-right--side">
                 <ul>
@@ -28,6 +28,14 @@
     <!--NAVIGATION BAR ENDS-->
 
     <main>
+        <div class="section-hero">
+            <div class="container grid grid-two--cols">
+            <div class="section-hero--content">
+                <p class="hero-subheading">EMPOWERING LIFELONG LEARNING</p>
+                <h1 class="hero-heading">Unlock your potential with thapa eduhub</h1>
+                <p class="hero-para">
+                    Welcome to Thapa Eduhub, your gateway to knowledge and skill development. We are dedicated to providing high quaility,accessible,education for learners of all ages and backgrounds.
+                </p>
     </main>
 </body>
 </html>
