--- a/index.html
+++ b/index.html
@@ -26,16 +26,26 @@
 
     </header>
     <!--NAVIGATION BAR ENDS-->
-
+ 
+    <!--HERO SECTION STARTS-->
     <main>
         <div class="section-hero">
             <div class="container grid grid-two--cols">
             <div class="section-hero--content">
-                <p class="hero-subheading">EMPOWERING LIFELONG LEARNING</p>
-                <h1 class="hero-heading">Unlock your potential with thapa eduhub</h1>
+                <p class="hero-subheading">NAMASKAR, MAIN</p>
+                <h1 class="hero-heading">ANURAG TIWARI</h1>
                 <p class="hero-para">
-                    Welcome to Thapa Eduhub, your gateway to knowledge and skill development. We are dedicated to providing high quaility,accessible,education for learners of all ages and backgrounds.
+                    I'm a B.Tech student majoring in Electronics and Communication with minors in Computer Science. Originating from small city Fatehpur, Uttar Pradesh.I am tech enthusiast as well as my passion lies in designing with foundation in various programming languages as well as tool. I am constantly exploring new technologies and methodologies to enhance my knowledge and stay updated to latest industry trends. My goal is to merge my technical skills with my design sensabilities to create innovative and user friendly solutions.
                 </p>
+                </div>
+                <div class="section-hero--image">
+                    
+                        <img src="myphoto.png" alt="anuarg photo" class="heroimage">
+                </div>
+                
+                </div>
     </main>
+
+    <!--HERO SECTION ENDS-->
 </body>
 </html>
