Glassmorhism effect added on hero para

--- a/index.html
+++ b/index.html
@@ -47,5 +47,14 @@
     </main>
 
     <!--HERO SECTION ENDS-->
+
+    <!--Education Section Starts-->
+    <section class="section-education">
+
+    </section>
+
+    
+    <!--Education Section Ends-->
+    
 </body>
 </html>
