--- a/index.html
+++ b/index.html
@@ -50,10 +50,32 @@
 
     <!--Education Section Starts-->
     <section class="section-education">
-
+        <div class="container container-main ">
+            <h2 class="main-heading">About Education</h2>
+        </div>
+        <div class="container about-education">
+            <div class="container-line">
+                <div class="circle1"></div>
+                <div class="circle2"></div>
+                <div class="circle3"></div>
+            </div>
+         <div class="container-edu">
+            <div class="classX edu-div"><h2 class="common-heading--edu">
+                CLASS X
+            </h2><p class="common-para--edu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem officia labore facilis placeat hic eveniet vitae obcaecati sit praesentium omnis accusamus est reprehenderit neque repudiandae, quod porro qui cum? Laboriosam.</p></div>
+            <div class="classXII edu-div"><h2 class="common-heading--edu">
+                CLASS XII
+            </h2><p class="common-para--edu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem officia labore facilis placeat hic eveniet vitae obcaecati sit praesentium omnis accusamus est reprehenderit neque repudiandae, quod porro qui cum? Laboriosam.</p></div>
+            <div class="btech edu-div">
+                <h2 class="common-heading--edu">
+                    GRADUATION
+                </h2><p class="common-para--edu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem officia labore facilis placeat hic eveniet vitae obcaecati sit praesentium omnis accusamus est reprehenderit neque repudiandae, quod porro qui cum? Laboriosam.</p>
+            </div>
+        </div>
+    </div>
     </section>
 
-    
+
     <!--Education Section Ends-->
     
 </body>
