education,nav and main section updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navbar-right--side">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="index.html">EDUCATION</a></li>
+                    <li><a href="#education">EDUCATION</a></li>
                     <li><a href="index.html">SKILL</a></li>
                     <li><a href="index.html">PROJECTS</a></li>
                     <li><a href="index.html">CONTACTS</a></li>
@@ -49,16 +49,11 @@
     <!--HERO SECTION ENDS-->
 
     <!--Education Section Starts-->
-    <section class="section-education">
+    <section class="section-education" id="education">
         <div class="container container-main ">
             <h2 class="main-heading">About Education</h2>
         </div>
-        <div class="container about-education">
-            <div class="container-line">
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-            </div>
+        <div class="container">
          <div class="container-edu">
             <div class="classX edu-div"><h2 class="common-heading--edu">
                 CLASS X
@@ -73,10 +68,35 @@
             </div>
         </div>
     </div>
+    <div class="custom-shape-divider-bottom-1716958659">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+        </svg>
+    </div>
     </section>
 
 
     <!--Education Section Ends-->
+
+    <!--Skill Section starts-->
+
+
+    <section class="section-skill">
+      <div class="container container-main">
+        About Skills
+      </div>
+
+      <div class="container container-skills grid grid-four--cols">
+        <div class="skills-div">
+            <img src="" alt="">
+            <h3 class="skill-common-heading">Web Development</h3>
+            <p class="skill-common-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam laborum nisi, dolor ipsum accusantium quas sint obcaecati, officiis quasi placeat iste, quo expedita commodi nobis earum vero rerum. Error, ad?</p>
+        </div>
+      </div>
+    </section>
+
+
+    <!--Skill section ends-->
     
 </body>
 </html>
