skills section done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://fontawesome.com/9ea5b84ccd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--NAVIGATION BAR STARTS-->
@@ -86,13 +88,34 @@
         About Skills
       </div>
 
-      <div class="container container-skills grid grid-four--cols">
+      <div class="container container-skills grid grid-three--cols">
         <div class="skills-div">
-            <img src="" alt="">
-            <h3 class="skill-common-heading">Web Development</h3>
-            <p class="skill-common-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam laborum nisi, dolor ipsum accusantium quas sint obcaecati, officiis quasi placeat iste, quo expedita commodi nobis earum vero rerum. Error, ad?</p>
+            <i class="fa-solid fa-code icon1"></i>
+            <h3 class="skill-common--heading">Web Development</h3>
+            <p class="skill-common--para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam laborum nisi, dolor ipsum accusantium quas sint obcaecati, officiis quasi placeat iste, quo expedita commodi nobis earum vero rerum. Error, ad?</p>
+        </div>
+        <div class="skills-div">
+            <i class="fa-solid fa-code icon2"></i>
+            <h3 class="skill-common--heading">Web Development</h3>
+            <p class="skill-common--para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam laborum nisi, dolor ipsum accusantium quas sint obcaecati, officiis quasi placeat iste, quo expedita commodi nobis earum vero rerum. Error, ad?</p>
+        </div>
+        <div class="skills-div">
+            <i class="fa-solid fa-code icon3"></i>
+            <h3 class="skill-common--heading">Web Development</h3>
+            <p class="skill-common--para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam laborum nisi, dolor ipsum accusantium quas sint obcaecati, officiis quasi placeat iste, quo expedita commodi nobis earum vero rerum. Error, ad?</p>
+        </div>
+        <div class="skills-div">
+            <i class="fa-solid fa-code icon4"></i>
+            <h3 class="skill-common--heading">Web Development</h3>
+            <p class="skill-common--para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam laborum nisi, dolor ipsum accusantium quas sint obcaecati, officiis quasi placeat iste, quo expedita commodi nobis earum vero rerum. Error, ad?</p>
+        </div>
+        <div class="skills-div">
+            <i class="fa-solid fa-code icon5"></i>
+            <h3 class="skill-common--heading">Web Development</h3>
+            <p class="skill-common--para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam laborum nisi, dolor ipsum accusantium quas sint obcaecati, officiis quasi placeat iste, quo expedita commodi nobis earum vero rerum. Error, ad?</p>
         </div>
       </div>
+      
     </section>
 
 
