--- a/index.html
+++ b/index.html
@@ -121,5 +121,23 @@
 
     <!--Skill section ends-->
     
+    <!--Project Section Starts-->
+
+    <div class="section-project">
+        <span>About Projects</span><br>
+        YET TO ADD
+    </div>
+    <!--Project Section Ends-->
+
+    <!--Contact Section starts-->
+
+    <div class="section-contact">
+        <div class="container">
+            <div class="contact-form">
+                <form action="#"></form>
+            </div>
+        </div>
+    </div>
+    <!--Contact Section Ends-->
 </body>
 </html>
