footer and contact section completed

--- a/index.html
+++ b/index.html
@@ -134,10 +134,39 @@
     <div class="section-contact">
         <div class="container">
             <div class="contact-form">
-                <form action="#"></form>
+                <h4 class="contact-heading">Contact Form</h4>
+                <form action="#">
+                    <div class="mb-3 username">
+                        <label for="username">Full Name</label>
+                        <br>
+                        <input type="text" name="username" id="Full Name" placeholder="Your Name">
+                    </div>
+                    <div class="mb-3 email">
+                        <label for="email">E-mail Id</label>
+                        <br>
+                        <input type="text" name="email" id="email" placeholder="abc@gmail.com">
+                    </div>
+                    <div class="mb-3 message">
+                        <label for="subject">Message</label>
+                        <br>
+                        <input type="text" name="message" id="subject" placeholder="Enter your message">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
     <!--Contact Section Ends-->
+
+    <!--Footer Section Starts-->
+
+    <footer class="section-footer">
+
+        <div class="footer-icons">
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+        </div>
+    </footer>
+    <!--Footer Section Ends-->
 </body>
 </html>
