--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#education">EDUCATION</a></li>
-                    <li><a href="index.html">SKILL</a></li>
-                    <li><a href="index.html">PROJECTS</a></li>
-                    <li><a href="index.html">CONTACTS</a></li>
+                    <li><a href="#skills">SKILLS</a></li>
+                    <li><a href="#projects">PROJECTS</a></li>
+                    <li><a href="#contacts">CONTACTS</a></li>
                 </ul>
             </div>
         </div>
@@ -35,7 +35,7 @@
             <div class="container grid grid-two--cols">
             <div class="section-hero--content">
                 <p class="hero-subheading">NAMASKAR, MAIN</p>
-                <h1 class="hero-heading">ANURAG TIWARI</h1>
+                <h1 class="hero-heading"><span>ANURAG TIWARI<span></span></h1>
                 <p class="hero-para">
                     I'm a B.Tech student majoring in Electronics and Communication with minors in Computer Science. Originating from small city Fatehpur, Uttar Pradesh.I am tech enthusiast as well as my passion lies in designing with foundation in various programming languages as well as tool. I am constantly exploring new technologies and methodologies to enhance my knowledge and stay updated to latest industry trends. My goal is to merge my technical skills with my design sensabilities to create innovative and user friendly solutions.
                 </p>
@@ -83,7 +83,7 @@
     <!--Skill Section starts-->
 
 
-    <section class="section-skill">
+    <section class="section-skill" id="skills">
       <div class="container container-main">
         About Skills
       </div>
@@ -123,7 +123,7 @@
     
     <!--Project Section Starts-->
 
-    <div class="section-project">
+    <div class="section-project" id="projects">
         <span>About Projects</span><br>
         YET TO ADD
     </div>
@@ -131,7 +131,7 @@
 
     <!--Contact Section starts-->
 
-    <div class="section-contact">
+    <div class="section-contact" id="contacts">
         <div class="container">
             <div class="contact-form">
                 <h4 class="contact-heading">Contact Form</h4>
