toggle button added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                     <li><a href="#contacts">CONTACTS</a></li>
                 </ul>
             </div>
+            <div class="toggle">
+                <div class="capsule"><div class="circle"></div></div>
+                <h1 class="text">Theme</h1>
+            </div>
         </div>
 
     </header>
@@ -168,5 +172,7 @@
         </div>
     </footer>
     <!--Footer Section Ends-->
+
+    <script src="index.js"></script>
 </body>
 </html>
