Dark theme Intro Animation added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="https://fontawesome.com/9ea5b84ccd.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!--BATMAN VIDEO STARTS -->
+    <div class="intro">
+        
+    </div>
+    <!--BATMAN VIDEO ENDS -->
     <!--NAVIGATION BAR STARTS-->
     <header class="section-navbar">
         <div class="container">
@@ -173,6 +178,7 @@
     </footer>
     <!--Footer Section Ends-->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="index.js"></script>
 </body>
 </html>
